Fixing clipping

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8649,7 +8649,7 @@ fieldset[disabled] .btn-vk.active {
   position: absolute;
 }
 #pullEmIn #blorbs-overlay {
-  padding: 59px;
+  padding: 65px;
 }
 #pullEmIn #lead {
   font-size: 2.8em;
