--- a/resources/assets/less/pages/homepage.less
+++ b/resources/assets/less/pages/homepage.less
@@ -10,7 +10,7 @@
 
   }
   #blorbs-overlay {
-    padding: 59px;
+    padding: 65px;
   }
 
   #lead {
